<resources>
    <string name="app_name">PlaylistMaker</string>
    <string name="search">Поиск</string>
    <string name="media_room">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share_the_app">Поделиться приложением</string>
    <string name="send_to_support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="media_library">Медиатека</string>
    <string name="email_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="email_text">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="myEmail">irbis2496@ya.ru</string>
    <string name="https_practicum_yandex_ru_android_developer">https://practicum.yandex.ru/android-developer/</string>
    <string name="https_yandex_ru_legal_practicum_offer_ru">https://yandex.ru/legal/practicum_offer/ru/</string>
    <string name="share_via">Share via</string>
    <string name="connection_problems">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="update">Обновить</string>
    <string name="clear_history">Очистить историю</string>
    <string name="you_have_been_searching">Вы искали</string>
    <string name="duration">Длительность</string>
    <string name="collection_name">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="_0_00">00:00</string>
    <string name="no_respond">Нет ответа от сервера</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="media_library_is_empty">Ваша медиатека пуста</string>
    <string name="no_playlist_has_been_created">Вы не создали \nни одного плейлиста</string>
    <string name="favourites">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="playlist_name_created">Плейлист %1$s создан</string>
    <string name="confirm_checklist_is_completed">Завершить создание плейлиста?</string>
    <string name="all_data_will_be_lost">Все несохраненные данные будут потеряны</string>
    <string name="cancel">Отмена</string>
    <string name="finish">Завершить</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="no">Нет</string>
    <string name="yes">Да</string>
    <string name="do_you_like_to_delete_the_track">Хотите удалить трек?</string>
    <string name="share">Поделиться</string>
    <string name="edit_info">Редактировать информацию</string>
    <string name="remove_playlist">Удалить плейлист</string>
    <string name="want_to_delete_playlist_name">Хотите удалить плейлист %1$s?</string>
    <string name="no_tracks_to_share">В данном плейлисте нет списка треков, которым можно поделиться</string>
    <string name="no_tracks_in_current_playlist">В этом плейлисте нет треков</string>
    <string name="name_">Название*</string>
    <string name="description">Описание</string>
    <string name="create">Создать</string>
    <string name="edit_playlist">Редактировать плейлист</string>
    <string name="save">Сохранить</string>
    <string name="playlist_has_been_changed">Плейлист изменен</string>
    <string name="playerservice">PlayerService</string>
    <string name="service_for_playing_music">Service for playing music</string>
    <string name="playlist_maker">Playlist Maker</string>
    <plurals name="tracks_count">
        <item quantity="one">%d трек</item>
        <item quantity="few">%d трека</item>
        <item quantity="many">%d треков</item>
        <item quantity="other">%d треков</item>
    </plurals>

</resources>