<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/settingsFragment"
    tools:context=".settings.ui.SettingsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="16dp"
        android:paddingTop="14dp"
        android:paddingBottom="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="4dp"
            android:text="@string/settings"
            style="@style/TitleTextStyle" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="24dp"
        android:orientation="vertical">

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/themeSwitcher"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/ButtonSettingsActivityStyle"
            android:text="@string/dark_theme">
        </com.google.android.material.switchmaterial.SwitchMaterial>
        <Button
            android:id="@+id/btn_share_the_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/share_the_app"
            app:drawableEndCompat="@drawable/ic_share_24"
            style="@style/ButtonSettingsActivityStyle">
        </Button>
        <Button
            android:id="@+id/btn_sent_to_support"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/send_to_support"
            app:drawableEndCompat="@drawable/ic_support_24"
            style="@style/ButtonSettingsActivityStyle">
        </Button>
        <Button
            android:id="@+id/btn_user_agreement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_agreement"
            app:drawableEndCompat="@drawable/ic_arrow_forward_24"
            style="@style/ButtonSettingsActivityStyle">
        </Button>
    </LinearLayout>
</LinearLayout>
