<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:id="@+id/activity_settings">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:layout_width="@dimen/button_size_48"
            android:layout_height="@dimen/button_size_48"
            android:layout_margin="4dp"
            android:backgroundTint="@color/white"
            style="?android:attr/borderlessButtonStyle"
            app:iconPadding="0dp"
            app:iconGravity="textStart"
            app:icon="@drawable/ic_back_arrow_48"
            app:iconTint="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/settings"
            android:textStyle="bold"
            android:textSize="@dimen/text_size"
            android:textColor="@color/black"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="24dp"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/padding_settings"
            android:paddingStart="@dimen/standart_lateral"
            android:paddingEnd="@dimen/standart_lateral">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/dark_theme"
                android:textColor="@color/black"
                android:textSize="@dimen/activity_settings_text"/>

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:layout_width="wrap_content"
                android:layout_height="10dp"
                android:layout_gravity="end" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/standart_lateral"
            android:paddingEnd="@dimen/standart_lateral"
            android:paddingVertical="@dimen/padding_settings">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/share_the_app"
                android:textColor="@color/black"
                android:textSize="@dimen/activity_settings_text"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:src="@drawable/ic_share_24"/>
        </FrameLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/standart_lateral"
            android:paddingEnd="@dimen/standart_lateral"
            android:paddingVertical="@dimen/padding_settings">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/send_to_support"
                android:textColor="@color/black"
                android:textSize="@dimen/activity_settings_text"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:src="@drawable/ic_support_24"/>
        </FrameLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/standart_lateral"
            android:paddingEnd="@dimen/standart_lateral"
            android:paddingVertical="@dimen/padding_settings">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/user_agreement"
                android:textColor="@color/black"
                android:textSize="@dimen/activity_settings_text"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:src="@drawable/ic_arrow_forward_24"/>
        </FrameLayout>
    </LinearLayout>
</LinearLayout>
